# chula-overflow-backend

./: .dockerignore  .env.example  .env.local  .gitignore  README.md  docker-compose.yml  nx.json  package-lock.json  package.json
.github/workflows/: auth_test_build.yaml  gateway_test_build.yaml
apps/auth/: Cargo.toml  Dockerfile  README.md  package-lock.json  package.json  project.json
apps/auth/service/: Cargo.toml  build.rs
apps/auth/service-core/: Cargo.toml
apps/auth/service-core/src/: error.rs  lib.rs  macros.rs  repository.rs
apps/auth/service-macros/: Cargo.toml
apps/auth/service-macros/src/: lib.rs
apps/auth/service-macros/tests/: simple_test.rs
apps/auth/service/src/: config.rs  database.rs  main.rs
apps/auth/service/src/app/auth/: handler.rs  model.rs  repository.rs  service.rs
apps/auth/service/src/app/user/: model.rs  repository.rs
apps/auth/src/: config.rs  database.rs  error.rs  index.js  main.rs
apps/auth/src/app/: mod.rs  service.rs
apps/auth/src/app/auth/: model.rs  repository.rs  service.rs
apps/config/: config.example.yaml
apps/course/: Dockerfile  package-lock.json  package.json  project.json
apps/course/src/: app.module.ts  main.ts
apps/course/src/course/: course.controller.ts  course.interface.d.ts  course.schema.ts  course.service.ts
apps/course/src/embeded/: embeded.controller.spec.ts  embeded.controller.ts  embeded.interface.d.ts  embeded.schema.ts  embeded.service.spec.ts  embeded.service.ts
apps/course/src/exam/: exam.controller.ts  exam.interface.d.ts  exam.schema.ts  (+1 more)
apps/gateway/: Dockerfile  Makefile  README.md  app.go  docs.go  go.mod  go.sum  main.go  project.json  route.go
apps/gateway/config/: config.go
apps/gateway/context/: context.go
apps/gateway/docs/: docs.go  swagger.json  swagger.yaml
apps/gateway/dto/: auth.go  course.go  exam.go  nlp.go  thread.go  user.go
apps/gateway/proto/: auth.pb.go  auth_grpc.pb.go  course.pb.go  course_grpc.pb.go  exam.pb.go  exam_grpc.pb.go  nlp.pb.go  nlp_grpc.pb.go  thread.pb.go  thread_grpc.pb.go  user.pb.go
apps/gateway/src/: app.go  main.go  route.go
apps/nlp/: Dockerfile  Makefile  nlp_pb2.py  nlp_pb2_grpc.py  requirements.txt  sentence_tokenizer.py  server.py  set_cache.py
apps/proto/: Makefile  auth.proto  course.proto  exam.proto  nlp.proto  project.json  thread.proto  user.proto
apps/thread/: package-lock.json  package.json  project.json
apps/thread/src/: a.ts  app.module.ts  main.ts
tools/: mongo-init.js
(+33 files in other folders)
