[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
mongodb = "2.3.1"
prost = "0.11.0"
prost-derive = "0.11.0"
serde = { version = "1.0.146", features = ["derive"] }
serde_yaml = "0.9.13"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
tonic = "0.8.2"
uuid = { version = "1.2.1", features = ["v4", "fast-rng"] }

[dev-dependencies]
clippy = "0.0.302"

[build-dependencies]
tonic-build = "0.8.2"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
rpath = false
lto = true
panic = "abort"
codegen-units = 8
incremental = false