[package]
name = "service-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6.0"
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = "1.0.103"
service-core = { path = "../service-core" }

[lib]
proc_macro = true
