[package]
name = "service"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
log = "0.4.17"
mongodb = "2.3.1"
prost = "0.11.0"
prost-derive = "0.11.0"
serde = { version = "1.0.146", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
tonic = "0.8.2"
uuid = { version = "1.2.1", features = ["v4", "fast-rng"] }
service-core = { path = "../service-core" }
service-macros = { path = "../service-macros" }
env_logger = "0.9.1"

[build-dependencies]
tonic-build = "0.8.2"
